#1588-CleanCode fixed code smell